--- a/index.html
+++ b/index.html
@@ -299,12 +299,12 @@
 
           <div>
             <label for="full-name">Ism familiya</label>
-            <input id="full-name" name="full-name" type="text" placeholder="Shuxratjon Xudoyberdiyev" autocomplete="name" required />
+            <input id="full-name" name="full-name" type="text" placeholder="Azizbek Lapasov" autocomplete="name" required />
           </div>
 
           <div>
             <label for="phone">Telefon raqam</label>
-            <input id="phone" name="phone" type="tel" inputmode="tel" placeholder="90 749 0870" pattern="[0-9+\-()\s]{9,20}" autocomplete="tel" required />
+            <input id="phone" name="phone" type="tel" inputmode="tel" placeholder="91 234 56 78" pattern="[0-9+\-()\s]{9,20}" autocomplete="tel" required />
           </div>
 
           <button class="btn" type="submit">Yuborish</button>
