--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   <!-- Hero -->
   <section class="hero">
     <div class="container hero-inner">
-      <span class="eyebrow">#ef5123 — Launch sahifa</span>
+      <span class="eyebrow">CodesME</span>
       <h1>Marketing bo'yicha 4 yillik tajriba. Telegramda 1 mln auditoriya.</h1>
       <p class="subtitle">
         Men Shuxratjon — CodesMe platformasi asoschisiman. 10 dan ortiq o'quvchilarni o'qitganman
